# django-bpmn-engine

./: .dockerignore  .env  .gitignore  .gitignore copy  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  custom_script_engine.py  docker-compose.yml  gunicorn_config.py  locust.py  manage.py  order_product  pyproject.toml  pytest.ini  run.py  setup.cfg  teste.bpmn
bpmn/: main1.bpmn  sub1.bpmn  sub2.bpmn  teste.bpmn  time_message.bpmn
django_bpmn_engine/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
django_bpmn_engine/core/: admin.py  apps.py  exceptions.py  models.py  utils.py  views.py
django_bpmn_engine/core/migrations/: 0001_initial.py  0002_alter_usertask_form_fields.py  0003_alter_usertask_form_fields.py
django_bpmn_engine/core/workflow/: parser.py  (+6 more)
django_bpmn_engine/support/: utils.py
doc/: Makefile  conf.py  development.rst  index.rst  intro.rst
doc/bpmn/: Makefile  advanced.rst  conf.py  events.rst  index.rst  multiinstance.rst  synthesis.rst  tasks.rst
doc/non-bpmn/: index.rst  patterns.rst
py_bpmn_engine/: exceptions.py  operators.py  workflow.py
py_bpmn_engine/bpmn/: PythonScriptEngine.py  exceptions.py
py_bpmn_engine/camunda/: README.md
py_bpmn_engine/serializer/: dict.py  xml.py
py_bpmn_engine/specs/: AcquireMutex.py  Cancel.py  Choose.py  ExclusiveChoice.py  Gate.py  Join.py  LoopResetTask.py  MultiChoice.py  MultiInstance.py  ReleaseMutex.py  StartTask.py  SubWorkflow.py  ThreadMerge.py  ThreadSplit.py  ThreadStart.py  Transform.py  Trigger.py  WorkflowSpec.py  base.py
py_bpmn_engine/util/: metrics.py
scripts/: start.sh
(+45 files in other folders)
